Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__Roster_Request__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Current_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Roster Requests</relationshipLabel>
        <relationshipName>Roster_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__District__c</fullName>
        <formula>SalesIQ__Position__r.SalesIQ__Territory__r.SalesIQ__District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_End_Date_Proposed__c</fullName>
        <label>Effective End Date(Proposed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_End_Date__c</fullName>
        <label>Effective End Date(Current)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_Start_Date__c</fullName>
        <label>Effective Start Date(Proposed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Modified_Territory_Name__c</fullName>
        <label>Modified Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Old_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Position</label>
        <referenceTo>SalesIQ__Position__c</referenceTo>
        <relationshipLabel>Roster Requests (Old Position)</relationshipLabel>
        <relationshipName>Roster_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Old_Territory_Name__c</fullName>
        <formula>SalesIQ__Old_Position__r.SalesIQ__Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Position__c</fullName>
        <label>Position</label>
        <referenceTo>SalesIQ__Position__c</referenceTo>
        <relationshipLabel>Roster Requests</relationshipLabel>
        <relationshipName>Roster_Requests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Proposed_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Roster Requests (Proposed User)</relationshipLabel>
        <relationshipName>Roster_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Region__c</fullName>
        <formula>SalesIQ__Position__r.SalesIQ__Territory__r.SalesIQ__Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request__c</fullName>
        <label>Request</label>
        <referenceTo>SalesIQ__Request__c</referenceTo>
        <relationshipLabel>Roster Requests</relationshipLabel>
        <relationshipName>Roster_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Id__c</fullName>
        <formula>SalesIQ__Position__r.SalesIQ__Territory__r.SalesIQ__Territory_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Name__c</fullName>
        <formula>SalesIQ__Position__r.SalesIQ__Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <label>Roster Request</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>NAME</columns>
        <columns>SalesIQ__Position__c</columns>
        <columns>SalesIQ__Effective_End_Date_Proposed__c</columns>
        <columns>SalesIQ__Effective_Start_Date__c</columns>
        <columns>SalesIQ__Proposed_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SalesIQ__New_Territory</fullName>
        <columns>SalesIQ__Request__c</columns>
        <columns>SalesIQ__Position__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>New Territory</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{0000000000}</displayFormat>
        <label>Roster Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roster Requests</pluralLabel>
    <recordTypes>
        <fullName>SalesIQ__Account_Requests</fullName>
        <active>true</active>
        <label>Account Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesIQ__Territory_Requests</fullName>
        <active>true</active>
        <label>Territory Requests</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>